--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@hamzav/react-native-headerbar",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Header bar with a hamburger menu for react-native apps",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HamzaKV/react-native-headerbar"
   },
   "keywords": [
     "react-native-header",
@@ -12,5 +16,9 @@
     "headerbar"
   ],
   "author": "hamzav <hamzakv333@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/HamzaKV/react-native-headerbar/issues"
+  },
+  "homepage": "https://github.com/HamzaKV/react-native-headerbar#readme"
 }
